@@ -1609,45 +1609,3 @@ This package is free software; you can redistribute it and/or modifiy
 it under the same terms as Perl itself.
 
 =cut
-
-#
-# CVS Changelog:
-# $Log: MatchEntry.pm,v $
-# Revision 1.12  2005/06/30 05:29:28  admin
-# Applied a patch by Ingo Herschmann
-#
-# Revision 1.11  2005/03/14 21:20:17  admin
-# Minor metadata updates
-#
-# Revision 1.10  2005/03/14 21:17:36  admin
-# fixed to work with more recent perl/tk
-#
-# Revision 1.9  2003/04/08 07:57:13  admin
-# added -wraparound and -bottomcmd/-topcmd callbacks
-#
-# Revision 1.8  2003/04/08 07:35:46  admin
-# Added -matchprefix option and behavior
-#
-# Revision 1.7  2003/04/06 20:08:16  admin
-# Added -sorttrigger, updated POD
-#
-# Revision 1.6  2003/04/06 12:20:11  admin
-# Added multimatch mode, -sortcmd callback
-#
-# Revision 1.5  2003/01/30 15:08:01  admin
-# Added POD, added <FocusOut> bind
-#
-# Revision 1.4  2003/01/29 16:56:20  admin
-# Improved support for case-insensitive matching, added 0/1-length callbacks
-#
-# Revision 1.3  2003/01/28 01:17:49  admin
-# added auto-completion and auto-popup functionality,
-# added callbacks for enter and tab,
-# basic keyboard event bindings done
-#
-# Revision 1.2  2003/01/25 20:00:21  admin
-# basic entry + listbox functionality added, based on Tk::BrowseEntry source
-#
-# Revision 1.1  2003/01/25 10:42:19  admin
-# initial commit
- 
